AMBARI-2567. Center align start/stop all buttons. (Jeff Sposetti via yusaku)
git-svn-id: https://svn.apache.org/repos/asf/incubator/ambari/trunk@1499840 13f79535-47bb-0310-9956-ffa450edef68

--- a/ambari-web/app/styles/application.less
+++ b/ambari-web/app/styles/application.less
@@ -1875,6 +1875,7 @@ width:100%;
 
   .start-stop-all-service-button {
     margin: 5px 5px 10px 10px;
+    text-align: center;
   }
   .operations-count {
     background: #953B39;
